# 2048-Solver

./: .gitignore  CHANGELOG.md  README  README.md  ROADMAP.md  TODO.md  design.drawio  main  manual  test.py
2048/: .pylintrc  2048  2048.py  2048.sh  display_latest_results.sh  setup.cfg  tfe.sh
2048/local_2048.egg-info/: PKG-INFO  SOURCES.txt
2048/presentation_layer/: game.py
2048/pyqt_game_displayer/: .pylintrc  displayer.py  setup.cfg
2048/rust_engine/: Cargo.toml
2048/rust_engine/src/: board.rs  direction.rs  lib.rs  player.rs
2048/rust_engine/src/game/: board.rs  direction.rs  game.rs  game_data_collector.rs  game_handler.rs  mod.rs
2048/rust_engine/src/utils/: export_to_file.rs  general_utils.rs  json_conversion.rs  mod.rs
docs/: design.puml  interesting_sites.txt  rust_design.puml
docs/rust_game_results/: scores_with_different_decision_functions.md
lib/: algorithm.py  board.py  curses.py  game.py  game_tools.py  gui_rendering.py  log.py  network.py  organiser.py  render.py  terminal_rendering.py
previous_displayer/data_layer/: game_data_formats.py
previous_displayer/game_engine/: board.py
previous_displayer/models/: game_data_formats.py
previous_displayer/neural_network/: network.py
previous_displayer/presentation_layer/: board.py  game.py  game_info.py  main_window.py
previous_displayer/utils/: qt_tools.py
rust/tfe/: Cargo.toml  main  tmp.txt
rust_testing/tfe/: Cargo.toml
tests/: quick.py
tests/lib/: terminal_rendering.py
tfe/src/: main.rs
version02/: main
version02/lib/: board.py  game.py  terminal_rendering.py
(+98 files in other folders)
