[package]
name = "tfe"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stopwatch = "0.0.7"
rand = "0.8.3"
strum = "0.24"
strum_macros = "0.24"
itertools = "0.10.5"
multimap = "0.8.3"
enum-display = "0.1.3"

[lib]
name = "tfe"
path = "src/lib.rs"
